--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
+  "name": "teacheragenda",
+  "description": "TeacherAgenda: An Ionic project",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/architruc/teacher-agenda.git"
+  },
+  "private": true,
   "dependencies": {
-    "angular2": "2.0.0-beta.13",
+    "angular2": "2.0.0-beta.15",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "humanize-duration": "^3.7.0",
-    "ionic-angular": "2.0.0-beta.4",
+    "ionic-angular": "2.0.0-beta.6",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0-alpha.3",
     "moment": "^2.12.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "underscore": "^1.8.3",
-    "zone.js": "0.6.6"
+    "zone.js": "^0.6.10"
   },
   "devDependencies": {
     "del": "2.2.0",
@@ -24,8 +31,6 @@
     "ionic-gulp-scripts-copy": "^1.0.0",
     "run-sequence": "1.1.5"
   },
-  "name": "teacheragenda",
-  "description": "TeacherAgenda: An Ionic project",
   "cordovaPlugins": [
     "cordova-plugin-device",
     "cordova-plugin-console",
