--- a/package.json
+++ b/package.json
@@ -7,18 +7,26 @@
   },
   "private": true,
   "dependencies": {
-    "angular2": "2.0.0-beta.15",
+    "@angular/common": "^2.0.0-rc.1",
+    "@angular/compiler": "^2.0.0-rc.1",
+    "@angular/core": "^2.0.0-rc.1",
+    "@angular/http": "^2.0.0-rc.1",
+    "@angular/platform-browser": "^2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
+    "@angular/router": "^2.0.0-rc.1",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "humanize-duration": "^3.7.0",
-    "ionic-angular": "2.0.0-beta.6",
+    "ionic": "^2.0.0-beta.25",
+    "ionic-angular": "^2.0.0-beta.7",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0-alpha.3",
     "moment": "^2.12.0",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
+    "ng2-translate": "^2.1.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "^5.0.0-beta.6",
     "underscore": "^1.8.3",
-    "zone.js": "^0.6.10"
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "del": "2.2.0",
@@ -28,7 +36,7 @@
     "ionic-gulp-fonts-copy": "^1.0.0",
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
-    "ionic-gulp-scripts-copy": "^1.0.0",
+    "ionic-gulp-scripts-copy": "^2.0.0",
     "run-sequence": "1.1.5"
   },
   "cordovaPlugins": [
