--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "url": "https://github.com/architruc/teacher-agenda.git"
   },
   "private": true,
+  "scripts": {
+    "postinstall": "typings install"
+  },
   "dependencies": {
     "@angular/common": "^2.0.0-rc.1",
     "@angular/compiler": "^2.0.0-rc.1",
@@ -37,7 +40,8 @@
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
     "ionic-gulp-scripts-copy": "^2.0.0",
-    "run-sequence": "1.1.5"
+    "run-sequence": "1.1.5",
+    "typings": "^1.0.4"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
