update gitignore and remove Ionic CLI from dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Specifies files to intentionally ignore when using Git
 # http://git-scm.com/docs/gitignore
 
+.idea
+!.idea/*.iml
+!.idea/modules.xml
+
 node_modules/
 www/build/
 platforms/
