--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "@angular/router": "^2.0.0-rc.1",
+    "angularfire2": "^2.0.0-beta.0",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
+    "firebase": "^2.4.2",
     "humanize-duration": "^3.7.0",
-    "ionic-angular": "^2.0.0-beta.7",
+    "ionic-angular": "^2.0.0-beta.8",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0-alpha.3",
     "moment": "^2.12.0",
     "ng2-translate": "^2.1.0",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.6",
     "underscore": "^1.8.3",
     "zone.js": "^0.6.12"
   },
