--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ionicons": "3.0.0-alpha.3",
     "moment": "^2.12.0",
     "ng2-translate": "^2.1.0",
+    "promise-defer": "^1.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "underscore": "^1.8.3",
