--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "@angular/router": "^2.0.0-rc.1",
-    "angularfire2": "^2.0.0-beta.0",
+    "angularfire2": "2.0.0-beta.0",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "firebase": "^2.4.2",
     "humanize-duration": "^3.7.0",
-    "ionic-angular": "^2.0.0-beta.8",
+    "ionic-angular": "2.0.0-beta.8",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0-alpha.3",
     "moment": "^2.12.0",
