Add offline support

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "del": "2.2.0",
     "gulp": "3.9.1",
+    "gulp-appcache": "0.0.4",
     "gulp-watch": "4.3.5",
     "ionic-gulp-browserify-typescript": "^1.0.0",
     "ionic-gulp-fonts-copy": "^1.0.0",
