--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "private": true,
   "scripts": {
-    "postinstall": "typings install"
+    "postinstall": "typings install",
+    "deploy": "gulp build && firebase deploy"
   },
   "dependencies": {
     "@angular/common": "^2.0.0-rc.1",
