--- a/package.json
+++ b/package.json
@@ -7,45 +7,46 @@
   },
   "private": true,
   "scripts": {
+    "start": "ionic serve",
     "postinstall": "typings install",
     "deploy": "gulp build && firebase deploy"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.1",
-    "@angular/compiler": "^2.0.0-rc.1",
-    "@angular/core": "^2.0.0-rc.1",
-    "@angular/http": "^2.0.0-rc.1",
-    "@angular/platform-browser": "^2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
-    "@angular/router": "^2.0.0-rc.1",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
     "angularfire2": "2.0.0-beta.0",
-    "es6-promise": "3.0.2",
-    "es6-shim": "^0.35.0",
-    "firebase": "^2.4.2",
-    "humanize-duration": "^3.7.0",
+    "es6-promise": "3.2.1",
+    "es6-shim": "0.35.0",
+    "firebase": "2.4.2",
+    "humanize-duration": "3.7.0",
     "ionic-angular": "2.0.0-beta.9",
-    "ionic-native": "^1.1.0",
-    "ionicons": "3.0.0-alpha.3",
-    "moment": "^2.12.0",
-    "ng2-translate": "^2.1.0",
-    "promise-defer": "^1.0.0",
-    "reflect-metadata": "^0.1.3",
+    "ionic-native": "1.3.2",
+    "ionicons": "3.0.0",
+    "moment": "2.12.0",
+    "ng2-translate": "2.1.0",
+    "promise-defer": "1.0.0",
+    "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "underscore": "^1.8.3",
-    "zone.js": "^0.6.12"
+    "underscore": "1.8.3",
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
     "del": "2.2.0",
     "gulp": "3.9.1",
     "gulp-appcache": "0.0.4",
     "gulp-watch": "4.3.5",
-    "ionic-gulp-browserify-typescript": "^1.0.0",
-    "ionic-gulp-fonts-copy": "^1.0.0",
-    "ionic-gulp-html-copy": "^1.0.0",
-    "ionic-gulp-sass-build": "^1.0.0",
-    "ionic-gulp-scripts-copy": "^2.0.0",
+    "ionic-gulp-browserify-typescript": "1.1.1",
+    "ionic-gulp-fonts-copy": "1.0.0",
+    "ionic-gulp-html-copy": "1.0.0",
+    "ionic-gulp-sass-build": "1.0.0",
+    "ionic-gulp-scripts-copy": "2.0.1",
     "run-sequence": "1.1.5",
-    "typings": "^1.0.4"
+    "typings": "1.3.1"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
