--- a/package.json
+++ b/package.json
@@ -12,42 +12,43 @@
     "deploy": "gulp build && firebase deploy"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "2.0.0-rc.2",
-    "angularfire2": "2.0.0-beta.2",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "angularfire2": "2.0.0-beta.4",
     "es6-promise": "3.2.1",
     "es6-shim": "0.35.1",
-    "firebase": "3.1.0",
-    "humanize-duration": "3.9.0",
-    "ionic-angular": "2.0.0-beta.11",
-    "ionic-native": "1.3.2",
+    "firebase": "3.3.0",
+    "humanize-duration": "3.9.1",
+    "ionic-angular": "2.0.0-beta.11-201609011853",
+    "ionic-gulp-tslint": "1.1.0",
+    "ionic-native": "1.3.20",
     "ionicons": "3.0.0",
-    "moment": "2.13.0",
-    "ng2-translate": "2.1.0",
+    "moment": "2.14.1",
+    "ng2-translate": "2.4.3",
     "promise-defer": "1.0.0",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
+    "reflect-metadata": "0.1.8",
+    "rxjs": "5.0.0-beta.11",
+    "tslint-ionic-rules": "0.0.5",
     "underscore": "1.8.3",
-    "zone.js": "0.6.12"
+    "zone.js": "0.6.17"
   },
   "devDependencies": {
-    "del": "2.2.1",
+    "del": "2.2.2",
     "gulp": "3.9.1",
     "gulp-appcache": "0.0.4",
-    "gulp-watch": "4.3.8",
+    "gulp-watch": "4.3.9",
     "ionic-gulp-browserify-typescript": "2.0.0",
     "ionic-gulp-fonts-copy": "1.0.0",
     "ionic-gulp-html-copy": "1.0.0",
     "ionic-gulp-sass-build": "1.0.0",
     "ionic-gulp-scripts-copy": "2.0.1",
     "run-sequence": "1.2.2",
-    "typings": "1.3.1"
+    "typings": "1.3.3"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
