fix(build) can bundle. Errors are now in the browser: must fix new modules arrangement.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,17 @@
 		"module": "es2015",
 		"moduleResolution": "node",
 		"target": "es5",
-		"noEmit": true,
-		"noImplicitAny": true
+		"noImplicitAny": true,
+		"types": [
+			"firebase"
+		]
 	},
 	"exclude": [
+		"bkp",
+		"old",
 		"node_modules",
+		"resources",
+		"www",
 		"platform",
 		"plugins"
 	],
