--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ionic serve",
     "postinstall": "typings install",
     "deploy": "gulp build && firebase deploy",
+    "tsc": "tsc",
     "build": "ionic-app-scripts build",
     "watch": "ionic-app-scripts watch",
     "serve:before": "watch",
